# Fediverse-Stats-Nerd

./: .pre-commit-config.yaml  README.md  fediverse_stats_nerd.py  instances.txt  makefile  pyproject.toml
fediverse_stats_nerd/: downloader.py
